infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      application: event-bus
  template:
    metadata:
      labels:
        application: event-bus
    spec:
      containers:
        - name: posts
          image: chaitanyaagile/event-bus
          imagePullPolicy: IfNotPresent
