infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      application: moderation
  template:
    metadata:
      labels:
        application: moderation
    spec:
      containers:
        - name: posts
          image: chaitanyaagile/moderation
          imagePullPolicy: IfNotPresent
