infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      application: query
  template:
    metadata:
      labels:
        application: query
    spec:
      containers:
        - name: posts
          image: chaitanyaagile/query
          imagePullPolicy: IfNotPresent
