infra/k8s/moderation-srv.yaml
# api version we are using may be almost like
# any library version or name
apiVersion: v1

# which kind of k8s object we are creating
kind: Service

# metadata tobe attached with object
metadata:
  name: moderation-service

spec:
  type: ClusterIP
  selector:
    application: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
